--- a/Web/Presenters/templates/Messenger/App.latte
+++ b/Web/Presenters/templates/Messenger/App.latte
@@ -57,7 +57,7 @@
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 10"><polygon points="0 0 0 10 8 10 8 4 4 4 4 0 0 0"/><polygon points="5 0 5 3 8 3 5 0"/></svg>
                                             <div class='attachment_note_content'>
                                                 <span class="attachment_note_text">Note</span>
-                                                <span class="attachment_note_name"><a data-bind="attr: { href: link, onclick: 'showArticle(' + id + ')' }, text: note.name" href="javascript:void(0);"></a></span>
+                                                <span class="attachment_note_name"><a data-bind="attr: { href: 'javascript:void(showArticle(' + id + '))' }, text: note.name"></a></span>
                                             </div>
                                         </div>
                                     </div>
