--- a/Web/Presenters/templates/Messenger/App.latte
+++ b/Web/Presenters/templates/Messenger/App.latte
@@ -52,30 +52,61 @@
                                     </div>
                                 </div>
                                 <div data-bind="if: type === 'note'" class="msg-attach-j-note">
-                                    <div data-bind="attr: { 'data-att_type': 'note', 'data-att_id': id }">
+                                    <div data-bind="attr: { 'data-att-type': 'note', 'data-att-id': id }">
                                         <div class="attachment_note">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 10"><polygon points="0 0 0 10 8 10 8 4 4 4 4 0 0 0"/><polygon points="5 0 5 3 8 3 5 0"/></svg>
-                                            <div class='attachment_note_content'>
+                                            <div class='attachment_note_content' style="width: 30%">
                                                 <span class="attachment_note_text">{_note}</span>
-                                                <span class="attachment_note_name">
+                                                <span class="attachment_note_name" style="white-space: nowrap">
                                                     <a href="#" data-bind="click: function() { showArticle(id); return false; }, text: note.name"></a>
                                                 </span>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div data-bind="if: type === 'doc'" class="msg-attach-j-doc">
+                                <div data-bind="if: type === 'doc'" class="msg-attach-j-doc attachment">
                                     <div style="width:100%;">
-                                        <a data-bind="attr: { href: link, 'data-att_type': 'doc', 'data-att_id': id }" style="display:none" class="docGalleryItem viewerOpener"></a>
-                                        <a data-bind="attr: { href: link }" class="docGalleryItem viewerOpener">
-                                            <div class="attachment_doc attachment_note">
-                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 10"><polygon points="0 0 0 10 8 10 8 4 4 4 4 0 0 0"/><polygon points="5 0 5 3 8 3 5 0"/></svg>
-                                                <div class='attachment_note_content'>
-                                                    <span class="attachment_note_text">{_document}</span>
-                                                    <span class="attachment_note_name" data-bind="text: document.name"></span>
-                                                </div>
+                                        <a data-bind="attr: { href: link, 'data-att-type': 'doc', 'data-att-id': id }" style="display:none" class="docGalleryItem viewerOpener"></a>
+                                        
+                                        <a class="docMainItem viewerOpener docGalleryItem" 
+                                           data-bind="visible: document.preview && document.preview.medium, attr: { href: link, 'data-id': id }">
+                                            
+                                            <img class="docGalleryItem_main_preview" loading="lazy" 
+                                                 data-bind="attr: { src: (document.preview && document.preview.medium) ? document.preview.medium : '', alt: document.name }">
+                                            
+                                            <div class="doc_top_panel doc_shown_by_hover">
+                                                <div class="doc_volume_action" id="add_icon"></div>
+                                            </div>
+
+                                            <div class="doc_bottom_panel doc_shown_by_hover doc_content info_shown">
+                                                <span class="doc_bottom_panel_name noOverflow doc_name" data-bind="text: document.name"></span>
+                                                <span class="doc_bottom_panel_size" data-bind="text: document.size_str"></span>
                                             </div>
                                         </a>
+
+                                        <div class="docMainItem docListViewItem" 
+                                             data-bind="visible: !(document.preview && document.preview.medium), attr: { 'data-id': id }">
+                                            
+                                            <a class="viewerOpener" data-bind="attr: { href: link }" style="margin-left: 10%;">
+                                                <img class="doc_icon" data-bind="visible: document.preview && document.preview.tiny, attr: { src: (document.preview && document.preview.tiny) ? document.preview.tiny : '' }">
+                                                <div class="doc_icon no_image" data-bind="visible: !document.preview">
+                                                    <span data-bind="text: document.ext" style="justify-content: center; align-items: center; display:flex;"></span>
+                                                </div>
+                                            </a>
+
+                                            <div class="doc_content noOverflow">
+                                                <a class="viewerOpener noOverflow" data-bind="attr: { href: link }">
+                                                    <b class="noOverflow doc_name" data-bind="text: document.name"></b>
+                                                </a>
+                                                <div class="doc_content_info">
+                                                    <span data-bind="text: document.pub_time" style="display:inline;"></span>, <span data-bind="text: document.size_str" style="display:inline;"></span>
+                                                </div>
+                                            </div>
+
+                                            <div class="doc_volume">
+                                                <div id="add_icon"></div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -87,46 +118,61 @@
                 </div>
             </div>
         </div>
+        <div id="messenger-attachment-preview" style="margin: 8px 12px; display: none;">
+            <div class="post-horizontal" style="display: flex; flex-wrap: wrap; gap: 8px;"></div>
+            <div class="post-vertical" style="margin-top: 8px;"></div>
+        </div>
         <div class="messenger-app--input">
             {if $correspondent->getId() === $thisUser->getId() || $correspondent->getPrivacyPermission('messages.write', $thisUser)}
                 <img class="ava" src="{$thisUser->getAvatarUrl('miniscule')}" alt="{$thisUser->getCanonicalName()}" />
                 <div class="messenger-app--input---messagebox">
-                    <textarea
-                            data-bind="value: messageContent, event: { keydown: onTextareaKeyPress }"
-                            name="message"
-                            placeholder="{_enter_message}"></textarea>
+                    <div id="write" class='model_content_textarea' data-id="{$thisUser->getId()}">
+                        <form action="/" method="post" enctype="multipart/form-data" style="margin:0;">
+                            <textarea id="wall-post-input-messenger" placeholder="{_enter_message}" name="message" style="width: 100%;resize: none;" class="small-textarea" autocomplete="off" data-bind="value: messageContent, event: { keydown: onTextareaKeyPress }"></textarea>
 
-                    <div style="float: right; display: flex; flex-direction: column; margin-top:6px;">
-                        <a class='menu_toggler'>
-                            {_attach}
-                        </a>
+                            <div class="post-buttons" style="display: block; margin-top:6px;">
+                                <div class="post-horizontal" style="display: none;"></div>
+                                <div class="post-vertical" style="display: none;"></div>
 
-                        <div id="wallAttachmentMenu" class="hidden">
-                            <a class="header menu_toggler">{_attach}</a>
-                            <a id="__photoAttachment">
-                                <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/application-x-egon.png" />
-                                {_photo}
-                            </a>
-                            <a id="__videoAttachment">
-                                <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/application-vnd.rn-realmedia.png" />
-                                {_video}
-                            </a>
-                            <a id="__audioAttachment">
-                                <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/audio-ac3.png" />
-                                {_audio}
-                            </a>
-                            <a id="__documentAttachment">
-                                <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/application-octet-stream.png" />
-                                {_document}
-                            </a>
-                            <a id="__notesAttachment">
-                                <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/application-x-srt.png" />
-                                {_note}
-                            </a>
-                        </div>
+                                <input type="hidden" name="horizontal_attachments" value="" autocomplete="off" />
+                                <input type="hidden" name="vertical_attachments" value="" autocomplete="off" />
+                                <input type="hidden" name="poll" value="none" autocomplete="off" />
+                                <input type="hidden" id="source" name="source" value="none" autocomplete="off" />
+                                <input type="hidden" name="geo" value="" autocomplete="off" />
+                                <input type="hidden" name="type" value="1" autocomplete="off" />
+                                <input type="hidden" name="hash" value="{$csrfToken}" />
+
+                                <a class='menu_toggler'>
+                                    {_attach}
+                                </a>
+                                <div id="wallAttachmentMenu" class="hidden">
+                                    <a class="header menu_toggler">{_attach}</a>
+                                    <a id="__photoAttachment">
+                                        <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/application-x-egon.png" />
+                                        {_photo}
+                                    </a>
+                                    <a id="__videoAttachment">
+                                        <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/application-vnd.rn-realmedia.png" />
+                                        {_video}
+                                    </a>
+                                    <a id="__audioAttachment">
+                                        <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/audio-ac3.png" />
+                                        {_audio}
+                                    </a>
+                                    <a id="__documentAttachment">
+                                        <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/application-octet-stream.png" />
+                                        {_document}
+                                    </a>
+                                    <a id="__notesAttachment">
+                                        <img src="/assets/packages/static/openvk/img/oxygen-icons/16x16/mimetypes/application-x-srt.png" />
+                                        {_note}
+                                    </a>
+                                </div>
+
+                                <button class="button" data-bind="click: sendMessage" style="margin-left:8px;">{_send}</button>
+                            </div>
+                        </form>
                     </div>
-
-                    <button class="button" data-bind="click: sendMessage">{_send}</button>
                 </div>
                 <img class="ava" src="{$correspondent->getAvatarUrl('miniscule')}" alt="{$correspondent->getCanonicalName()}" />
             {else}
@@ -314,7 +360,8 @@
                 msgData.set("content", content);
                 msgData.set("hash", {$csrfToken});
                 
-                let attachmentElements = document.querySelectorAll("[data-att-id]");
+                const writeBox = document.querySelector('.messenger-app--input #write');
+                let attachmentElements = writeBox ? writeBox.querySelectorAll("[data-att-id]") : document.querySelectorAll("[data-att-id]");
                 let attachmentIds = [];
                 if(attachmentElements && attachmentElements.length > 0) {
                     attachmentElements.forEach(el => {
@@ -358,6 +405,19 @@
                     
                     console.debug("Message sent, updating view.");
                     that._patchMessage(tempId, JSON.parse(xhr.responseText));
+                    
+                    const writeBox = document.querySelector('#write');
+                    if(writeBox) {
+                        writeBox.querySelector('.post-horizontal').innerHTML = '';
+                        writeBox.querySelector('.post-vertical').innerHTML = '';
+                    }
+
+                    const previewBox = document.querySelector('#messenger-attachment-preview');
+                    if(previewBox) {
+                        previewBox.querySelector('.post-horizontal').innerHTML = '';
+                        previewBox.querySelector('.post-vertical').innerHTML = '';
+                        previewBox.style.display = 'none';
+                    }
                 });
                 xhr.send(msgData);
                 console.debug("Message sent, awaiting response.");
@@ -389,5 +449,49 @@
                 }
             }
         });
+
+        (function() {
+            function normalizeUploadItem(el) {
+                if(!el) return;
+                const items = el.querySelectorAll('.upload-item');
+                items.forEach(a => {
+                    const type = a.getAttribute('data-type') || a.getAttribute('data-att-type');
+                    const id = a.getAttribute('data-id') || a.getAttribute('data-att-id') || a.getAttribute('data-prettiest-id') || a.getAttribute('data-pretty-id');
+                    if(type && id) {
+                        a.setAttribute('data-att-type', type);
+                        a.setAttribute('data-att-id', id);
+                        
+                        const previewBox = document.querySelector('#messenger-attachment-preview');
+                        if(previewBox) {
+                            const container = type === 'doc' || type === 'note' ? 
+                                previewBox.querySelector('.post-vertical') : 
+                                previewBox.querySelector('.post-horizontal');
+                            if(container && !container.querySelector(`[data-att-id="${ id }"]`)) {
+                                container.appendChild(a.cloneNode(true));
+                                previewBox.style.display = 'block';
+                            }
+                        }
+                    }
+                });
+            }
+            const write = document.querySelector('#write');
+            if(write) normalizeUploadItem(write);
+            const observer = new MutationObserver(mutations => {
+                mutations.forEach(m => {
+                    if(m.addedNodes && m.addedNodes.length) {
+                        m.addedNodes.forEach(node => {
+                            if(node.nodeType === 1) {
+                                if(node.matches && node.matches('.upload-item')) {
+                                    normalizeUploadItem(node.parentNode || node);
+                                } else {
+                                    normalizeUploadItem(node);
+                                }
+                            }
+                        });
+                    }
+                });
+            });
+            if(write) observer.observe(write, { childList: true, subtree: true });
+        })();
     </script>
 {/block}
