fix(audio): playlist

--- a/Web/Presenters/templates/Audio/List.latte
+++ b/Web/Presenters/templates/Audio/List.latte
@@ -141,7 +141,7 @@
 
             <div class="scroll_container playlistContainer" n:if="$playlistsCount > 0">
                 <div class='scroll_node' n:foreach='$playlists as $playlist'>
-                    {include 'playlistListView.xlatteml', playlist => $playlist}
+                    {include 'playlistListView.latte', playlist => $playlist}
                 </div>
             </div>
 
