fix(settings): js settings dublicated, grey color in tz

--- a/Web/Presenters/templates/User/Settings.latte
+++ b/Web/Presenters/templates/User/Settings.latte
@@ -614,10 +614,10 @@
         </table>
         
         <h4>{_ui_settings_timezone}</h4>
-        <table cellspacing="7" cellpadding="0" width="60%" border="0" align="center" id="_js_settings">
+        <table cellspacing="7" cellpadding="0" width="60%" border="0" align="center">
             <tbody>
                 <tr>
-                    <td width="120" valign="top" align="right">{_ui_settings_timezone}</td>
+                    <td width="120" valign="top" align="right"><span class="nobold">{_ui_settings_timezone}</span></td>
                     <td>
                         <select id="timezone">
                             {foreach TIMEZONES_ARRAY as $tz}
